# chess_multiple

./: Bishop.h  CMakeLists.txt  ChatPanel.cpp  ChatPanel.h  ChessBoard.cpp  ChessBoard.h  ChessPiece.h  King.h  Knight.h  LICENSE  Network-app.pro  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  Pawn.h  PromotionDialog.cpp  PromotionDialog.h  Queen.h  Rook.h  StatusPanel.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  statuspanel.h
